--- a/packages/vtable-sheet/src/styles/sheet-tab.css
+++ b/packages/vtable-sheet/src/styles/sheet-tab.css
@@ -24,7 +24,7 @@
   border-radius: 4px;
   display: none;
   margin: 0;
-  padding: 0 6px 0 2px;
+  padding: 0 2px 0 2px;
   box-sizing: border-box;
   list-style: none;
   overflow-y: auto;
@@ -51,12 +51,13 @@
   border-radius: 4px;
   height: 32px;
   line-height: 32px;
-  margin-top: 2px;
+  margin: 2px 0;
   padding: 0 8px;
   background-color: #f8f8f840;
   max-width: 150px;
   overflow-x: hidden;
   text-overflow: ellipsis;
+  box-sizing: border-box;
 }
 
 .vtable-sheet-menu-item:hover {
@@ -88,9 +89,6 @@
 /* 单个sheet标签 */
 .vtable-sheet-tab {
   width: auto;
-  max-width: 150px;
-  overflow-x: hidden;
-  text-overflow: ellipsis;
   /* 禁止标签压缩，保持内容撑开的宽度 */
   flex-shrink: 0;
   padding: 0 12px;
