--- a/packages/vtable-sheet/src/styles/index.css
+++ b/packages/vtable-sheet/src/styles/index.css
@@ -2,4 +2,5 @@
 @import './common.css';
 @import './sheet.css';
 @import './formula-bar.css';
-@import './sheet-tab.css'; 
+@import './sheet-tab.css';
+@import './formula-autocomplete.css';
